--- a/template.html
+++ b/template.html
@@ -4,9 +4,7 @@
   <title>Markdown Editor</title>
 </head>
 <body>
-  <h1>This is index.html in ./</h1>
   <div id="root"></div>
-  <script src="build/bundle.js"></script>
-
+  <!-- <script defer src="build/bundle.js"></script> -->
 </body>
 </html>
